Adding style to html phase 2

--- a/grades.html
+++ b/grades.html
@@ -2,10 +2,12 @@
 <html>
 <head>
   <title>My Grades</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>My Grades</h1>
+
   </header>
 
   <!-- Navigation -->
