--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Student Profile & Course Portal</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
